# QtStopWatches

./: CMakeLists.txt  LCDStopWatch.cpp  LCDStopWatch.h  mainwindow.cpp  mainwindow.h
